# veloxsim-ndem-open

./: .gitignore  COMMERCIAL_LICENSE.md  LICENSE  README.md  pyproject.toml
examples/: _stl_utils.py  demo_chute.py  demo_hopper.py  demo_hopper_flow.py  demo_repose.py  hopper_viewer.py  viewer.py
examples/STL/: Hopper2.stl
examples/STL/chute/: feed.stl  impact plate.stl  inlet.stl  lower chute.stl  receive.stl  skirts.stl  top_skirts.stl
examples/data/: hopper_packing.npy  hopper_packing_60k.npy  make_hopper_packing.py
src/veloxsim_ndem/: __init__.py  config.py  sdf.py  solver.py
src/veloxsim_ndem/kernels/: __init__.py  apply.py  contact_impulse.py  contact_sdf.py  hashset.py  rolling.py
tests/: test_free_fall.py  test_inelastic_collision.py  test_pile_settle.py  test_rotation.py  test_sdf.py  test_skeleton.py  test_surface_velocity.py
